<resources>
    <!-- Strings related to login -->
    <string name="app_name">Żółw+</string>
    <string name="prompt_email">Nazwa użytkownika</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Żółw+</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="back">Wróć</string>
    <string name="alert_title_text">Alerty</string>
    <string name="no_alerts">Brak alertów</string>
    <string name="send_data_error_msg">Coś poszło nie tak. Kod błędu: </string>
    <string name="invalid_username">Podaj nazwę użytkownika</string>
    <string name="invalid_password">Podaj hasło</string>
    <string name="invalid_password_short">Hasło musi posiadać minimum 5 znaków</string>
...

    <string name="title">Smartarium</string>

    <string name="lack_of_data">Brak danych</string>
    <string name="data_to_send">Dane do wysłania</string>
    <string name="clean">Wyczyść</string>
    <string name="send">Wyślij</string>

    <!-- maintenance possible values -->
    <string name="text_maintenance">Utrzymanie</string>
    <string-array name="maintenance_main_strings">
        <item>Światło</item>
        <!--<item>Przerwa techniczna</item>-->
...
        <item>Przerwa techniczna do</item>
    </string-array>

    <!-- other possible values -->
    <string name="text_other">Inne parametry</string>
    <string-array name="other_main_strings">
        <item>Filtr</item>
        <item>Waga</item>
        <item>Woda</item>
        <item>Żarówka</item>
        <item>Wróć</item>
    </string-array>

    <!-- Filtr fragment-->
    <string name="cleaning">Czyszczenie</string>

    <string-array name="filter_strings">
        <item>Czyszcenie</item>
        <item>Wymiana</item>
        <item>Gąbka</item>
        <item>Wata</item>
        <item>Żwir</item>
        <item>Ceramika</item>
    </string-array>

    <!-- Weight fragment-->
    <string name="matilda">Matylda</string>
    <string name="stefanie">Stefania</string>
...
    <string name="stefanie_key">mass_S</string>
    <string name="weight_hint">Waga w gramach</string>

    <!-- Water fragment-->
    <string name="water_title">Woda</string>
    <string name="change">Wymiana</string>
    <string name="refill">Dolanie</string>
    <string name="water_hint">Ilość wody w litrach</string>

    <!-- Bulb fragment-->
    <string-array name="bulb_strings">
        <item>Wymiana</item>
        <item>Wróć</item>
...
