<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.other.WeightFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text=""
                android:textAlignment="center"
                android:textSize="36sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:weightSum="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textAlignment="center"
                    android:text="@string/matilda"
                    android:layout_weight="1"
                    android:textSize="30sp">

                </TextView>

                <EditText
                    android:id="@+id/matilda_mass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/weight_hint"
                    android:inputType="number"
                    android:textSize="20dp">

                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:weightSum="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stefanie"
                    android:textAlignment="center"
                    android:textSize="30dp"
                    android:layout_weight="1">

                </TextView>
                <EditText
                    android:id="@+id/stefanie_mass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight_hint"
                    android:inputType="number"
                    android:textSize="20dp"
                    android:layout_weight="1">

                </EditText>
            </LinearLayout>
            <Button
                android:id="@+id/bt_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/send"
                android:background="@color/food_1"
                />
            <Button
                android:id="@+id/bt_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/back"
                android:background="@color/back"
                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>