...
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/change"
            android:background="@color/food_0"
            />
        <Button
            android:id="@+id/bt_refill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/refill"
            android:background="@color/food_1"
        />
        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="numberDecimal"
            android:hint="@string/water_hint"
...
